<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmw_zenoh_examples_nodes</name>
  <version>0.0.0</version>
  <description>Nodes for showcasing rmw_zenoh capabilities</description>
  <maintainer email="yadunund@gmail.com">Yadunund Vijay</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <exec_depend>rmw_zenoh_cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
